--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,8 @@ SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
+SESSION_SECURE_COOKIE=true
+SESSION_SAME_SITE=strict
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
@@ -55,6 +57,9 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+TURNSTILE_SITEKEY=
+TURNSTILE_SECRET=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
